--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "doctrine/dbal": "^3.7",
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
+        "filament/upgrade": "^3.2",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^5.10",
